# 30-Worlds-City-Generator

./: CMakeLists.txt  City.cpp  City.h  Culture.cpp  Culture.h  District.cpp  District.h  NPC.cpp  NPC.h  NameGenerator.cpp  NameGenerator.h  NotableLocation.cpp  NotableLocation.h  README.md  main.cpp
BaseNPCFiles/: Default Bonds List.txt  Default Flaws List.txt  Default Ideals List.txt  Default Personality Trait List.txt
CultureFiles/Default/: DistrictSpecialization.txt  FirstNamesF.txt  LastNames.txt  NotableLocationsTypes.txt  Occupation.txt
